--- a/kinomart/kinomart/templates/admin_login.html
+++ b/kinomart/kinomart/templates/admin_login.html
@@ -21,13 +21,26 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                     <div class="card-body">
-                                        <form>
+
+                                        {% if messages %}
+                                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                            {% for message in messages %}
+                                               {{message}}
+                                    
+                                            {% endfor %}
+                                           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                         </div>
+                                         {% endif %}
+
+                                        <form method="post" action="{% url 'admin_login' %}">
+
+                                            {% csrf_token %}
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
+                                                <input class="form-control" id="inputEmail" name= "email" type="email" placeholder="name@example.com" />
                                                 <label for="inputEmail">Email address</label>
                                             </div>
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
+                                                <input class="form-control" id="inputPassword" name="password" type="password" placeholder="Password" />
                                                 <label for="inputPassword">Password</label>
                                             </div>
                                             <div class="form-check mb-3">
@@ -36,7 +49,8 @@
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="{% url 'index' %}">Login</a>
+                                                <button class="btn btn-primary" type="submit">Login</button>
+                                                <!-- <button  href="{% url 'index' %}">Login</a> -->
                                             </div>
                                         </form>
                                     </div>
