--- a/kinomart/kinomart/templates/add_product.html
+++ b/kinomart/kinomart/templates/add_product.html
@@ -63,12 +63,17 @@
 
                 <div class="mb-1">
             
-                    <label for="first_name" class="form-label">Varient</label>
+                    <label for="" class="form-label">Varient</label>
                     <button type="button" id="addButton">Add</button>
                     <br>
                     <div id="variantContainer">
                         <div class="variant">
                             <input type="text" name="quantity1" placeholder="Quantity">
+                            <select name="unit1">
+                                {% for unit in units %}
+                                    <option value="{{ unit.id }}">{{ unit.unit }}</option>
+                                {% endfor %}
+                            </select>
                             <input type="text" name="stock1" placeholder="Stock">
                             <input type="text" name="price1" placeholder="Price">
                             <!-- Add more fields as needed -->
@@ -102,6 +107,11 @@
             variantCount++;
             var newVariant = '<div class="variant">' +
                 '<input type="text" placeholder="quantity" name="quantity' + variantCount + '">' +
+                '<select name="unit'+variantCount+'">'+
+                                '{% for unit in units %}'+
+                                    '<option value="{{ unit.id }}">{{ unit.unit }}</option>'+
+                                '{% endfor %}'+
+                            '</select>'+
                 '<input type="text" placeholder="stock" name="stock' + variantCount + '">' +
                 '<input type="text" placeholder="price" name="price' + variantCount + '">' +
                 '</div>';
