--- a/kinomart/kinomart/templates/admin_theme.html
+++ b/kinomart/kinomart/templates/admin_theme.html
@@ -60,7 +60,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{% url 'admin_userlist' %}">
+                                    <a class="nav-link" href="{% url 'list_product' %}">
                                         <div class="sb-nav-link-icon"><i class="fa-solid fa-boxes-stacked"></i></div>
                                         View Products
                                     </a>
