--- a/kinomart/kinomart/templates/adm_temp_files/css/styles.css
+++ b/kinomart/kinomart/templates/adm_temp_files/css/styles.css
@@ -10,7 +10,15 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ .dropdown-submenu {
+  position: relative;
+}
 
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
 
 :root {
   --bs-blue: #0d6efd;
