Category CRUD successful, admin side session handling done

--- a/kinomart/kinomart/templates/add_product.html
+++ b/kinomart/kinomart/templates/add_product.html
@@ -79,14 +79,14 @@
                     <br>
                     <div id="variantContainer">
                         <div class="variant">
-                            <input type="text" name="quantity1" placeholder="Quantity">
+                            <input type="text" name="quantity1" placeholder="Quantity" required>
                             <select name="unit1">
                                 {% for unit in units %}
                                     <option value="{{ unit.id }}">{{ unit.unit }}</option>
                                 {% endfor %}
                             </select>
-                            <input type="text" name="stock1" placeholder="Stock">
-                            <input type="text" name="price1" placeholder="Price">
+                            <input type="text" name="stock1" placeholder="Stock" required>
+                            <input type="text" name="price1" placeholder="Price" required>
                             <!-- Add more fields as needed -->
                         </div>
                         <br>
