--- a/kinomart/kinomart/templates/list_product.html
+++ b/kinomart/kinomart/templates/list_product.html
@@ -64,7 +64,7 @@
             
     
             <li><hr class="dropdown-divider"/></li>
-            <li><a href="{% url 'edit_catagories' %}">Edit Categories</a></li>
+            <li><a href="{% url 'edit_categories' %}">Edit Categories</a></li>
         </ul>
     <a class="btn btn-primary" href="{% url 'add_product' %}">Add Product</a>
 
