--- a/kinomart/kinomart/templates/edit_categories.html
+++ b/kinomart/kinomart/templates/edit_categories.html
@@ -15,8 +15,10 @@
         </div>
         <form id="add-category-form" action="{% url 'add_category' %}" method="post" style="display: none;">
             {% csrf_token %}
-            <input type="text" name="category_name" placeholder="Enter new category" required>
-            <input type="submit" value="Submit">
+            <div style="display: flex; justify-content: space-between; width: 400px;">
+                <input type="text" name="category_name"  class="form-control" placeholder="Enter new category" required>
+                <input type="submit" value="Add" class="btn btn-secondary">
+            </div>
           </form>
 
 
@@ -31,10 +33,12 @@
                     <h5 style="display: inline;">{{ category.category_name }}</h5>
                     <form class="add-subcategory-form" action="{% url 'add_subcategory' %}" method="post" style="display: none;">
                         {% csrf_token %}
-                        <input type="text" name="subcategory_name" placeholder="Enter new subcategory" required>
-                        <input type="hidden" name="category_id" value="{{category.category_id}}">
-                        <input type="submit" value="Submit">
-                      </form>
+                        <div style="display: flex; justify-content: space-between; width: 400px;">
+                            <input type="text" name="subcategory_name" class="form-control" placeholder="Enter new subcategory" required>
+                            <input type="hidden" name="category_id" value="{{category.category_id}}">
+                            <input type="submit" class="btn btn-secondary" value="Submit">
+                        </div>
+                    </form>
                     <div style="display: inline;" class="d-grid gap-2 d-md-flex justify-content-md-end">
 
                         <button class="btn btn-outline-success add-subcategory-btn" id="">Add new sub category</button>
