Email verification for user and related operations.

--- a/kinomart/kinomart/templates/signup.html
+++ b/kinomart/kinomart/templates/signup.html
@@ -81,7 +81,7 @@
 
         <div class="mb-1">
           <label for="pin" class="form-label">PIN</label>
-          <input type="password" class="form-control" name="pin" id="pin">
+          <input type="text" class="form-control" name="pin" id="pin">
         </div>
        
             
