Categories with tabs in user side done. Product detailed view page just added

--- a/kinomart/kinomart/templates/theme.html
+++ b/kinomart/kinomart/templates/theme.html
@@ -9,6 +9,9 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+        
+        <link rel="icon" type="image/x-icon" href="{% static '/img/favicon.ico' %}">
+
 
         <!-- font awesome css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
