--- a/kinomart/kinomart/templates/index.html
+++ b/kinomart/kinomart/templates/index.html
@@ -21,11 +21,11 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active rounded">
                                     <img src="{% static 'img/hero-img-1.png' %}" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
-                                    <a href="#" class="btn px-4 py-2 text-white rounded">Fruites</a>
+                                    <a href="#tab-all" class="btn px-4 py-2 text-white rounded">Fruites</a>
                                 </div>
                                 <div class="carousel-item rounded">
                                     <img src="{% static 'img/hero-img-2.jpg' %}" class="img-fluid w-100 h-100 rounded" alt="Second slide">
-                                    <a href="#" class="btn px-4 py-2 text-white rounded">Vegitables</a>
+                                    <a href="#tab-all" class="btn px-4 py-2 text-white rounded">Vegitables</a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -108,7 +108,11 @@
                         </div>
                         <div class="col-lg-8 text-end">
                             <ul class="nav nav-pills d-inline-flex text-center mb-5">
-                                
+                                <li class="nav-item">
+                                    <a class="d-flex m-2 py-2 bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-all">
+                                        <span class="text-dark" style="width: 130px;">All Products</span>
+                                    </a>
+                                </li>
                                 {% for category in categories %}
                                 <li class="nav-item">
                                     <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-{{category.category_id}}">
@@ -125,12 +129,53 @@
                     
                     <div class="tab-content">
 
+        <!-- for all products -->
+
+        
+
+
+                        <div id="tab-all" class="tab-pane fade show p-0 active">
+                            <div class="row g-4">
+                                <div class="col-lg-12">
+                                    <div class="row g-4">
+                                        
+                                        {% for category in categories %}
+                                        {% for sub in category.subcategories %}
+                                        {% for product in sub.products %}
+
+                                        <div class="col-md-6 col-lg-4 col-xl-3" >
+                                            <div class="rounded position-relative fruite-item">
+                                                <div class="fruite-img">
+                                                    <a href="product/{{product.product_id}}"><img src="{{product.image}}" style="height: 300px;" class="img-fluid w-100 rounded-top" alt=""></a>
+                                                </div>
+                                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Sale</div>
+                                                <div class="p-4 border border-secondary border-top-0 rounded-bottom" style="height: 250px;">
+                                                    <h4>{{product.product_name}}</h4>
+                                                    <p>{{product.description}}</p>
+                                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                                        <p class="text-dark fs-5 fw-bold mb-0">₹{{product.price}} / {{product.quantity}}{{product.unit}}</p>
+                                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endfor %}
+                                        {% endfor %}
+                                        
+                                        {% endfor %}
+                                        
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                       
                         
                         
                         {% for category in categories %}
 
-                        <div id="tab-{{category.category_id}}" class="tab-pane fade show p-0 active">
+                        <div id="tab-{{category.category_id}}" class="tab-pane fade show p-0">
                             <div class="row g-4">
                                 <div class="col-lg-12">
                                     <div class="row g-4">
@@ -139,13 +184,13 @@
                                         {% for sub in category.subcategories %}
                                         {% for product in sub.products %}
 
-                                        <div class="col-md-6 col-lg-4 col-xl-3">
+                                        <div class="col-md-6 col-lg-4 col-xl-3" >
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
                                                     <a href="product/{{product.product_id}}"><img src="{{product.image}}" style="height: 300px;" class="img-fluid w-100 rounded-top" alt=""></a>
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Sale</div>
-                                                <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+                                                <div class="p-4 border border-secondary border-top-0 rounded-bottom" style="height: 250px;">
                                                     <h4>{{product.product_name}}</h4>
                                                     <p>{{product.description}}</p>
                                                     <div class="d-flex justify-content-between flex-lg-wrap">
